src/objects/agf__ADM_Priority_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>agf__Frequency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Frequency</label>
        <referenceTo>agf__ADM_Frequency__c</referenceTo>
        <relationshipName>Severity_Matries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Impact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impact</label>
        <referenceTo>agf__ADM_Impact__c</referenceTo>
        <relationshipName>Severity_Matries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority</label>
        <referenceTo>agf__ADM_Priority__c</referenceTo>
        <relationshipLabel>Priority Mapping</relationshipLabel>
        <relationshipName>Priority_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Priority Mapping</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>agf__Frequency__c</columns>
        <columns>agf__Impact__c</columns>
        <columns>agf__Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Priority Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>